src/test/ui/issues/issue-45199.mir.stderr
error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:10:5
   |
LL |     let b: Box<isize>;
   |         - help: make this binding mutable: `mut b`
...
LL |     b = Box::new(1);    //[ast]~ NOTE first assignment
   |     - first assignment to `b`
LL |                         //[mir]~^ NOTE first assignment
LL |     b = Box::new(2);    //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:21:5
   |
LL |     let b = Box::new(1);    //[ast]~ NOTE first assignment
   |         -
   |         |
   |         first assignment to `b`
   |         help: make this binding mutable: `mut b`
...
LL |     b = Box::new(2);        //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^ cannot assign twice to immutable variable

error[E0384]: cannot assign to immutable argument `b`
  --> $DIR/issue-45199.rs:30:5
   |
LL | fn test_args(b: Box<i32>) {  //[ast]~ NOTE first assignment
   |              - help: make this binding mutable: `mut b`
...
LL |     b = Box::new(2);            //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^ cannot assign to immutable argument

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0384`.
